syntax = "proto3";

package comment.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/comment";

message AfterAuth {
  int64 user_id = 1;
  int64 creation_id = 2;
  int32 comment_id = 3;
}

message AnyAfterAuth{
  repeated AfterAuth any_after_auth = 1;
}